<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.preferences.SharedPreferenceFragment">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <CheckBoxPreference
            app:key="silent mode"
            app:defaultValue="false"
            app:title="Silent Mode"
            app:summary="Mute all sounds from this app"/>
        <SwitchPreference
            app:key="custom_storage"
            app:defaultValue="false"
            app:switchTextOn="Yes"
            app:switchTextOff="No"
            app:title="Awesome Mode"
            app:summary="Enable the Awesome Mode feature"/>
        <SwitchPreference

            app:key="xz2"
            app:defaultValue="false"
            app:switchTextOn="Yes"
            app:switchTextOff="No"
            app:title="xz"
            app:summary="Enable "/>
        <SwitchPreference
            app:dependency="xz2"
            app:key="switch_andromeda"
            app:defaultValue="true"
            app:switchTextOn="Yes"
            app:switchTextOff="No"
            app:title="Выкл чат, Вкл Андромеда"
            app:summaryOff="Режим чата"
            app:summaryOn="Режим Hex"
            app:summary="Выкл чат, Вкл Андромеда"/>

    </PreferenceCategory>

</PreferenceScreen>