<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">



    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tcp_ip_client_2.ui.home_page.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_title"
            app:destination="@id/nav_title" />
        <action
            android:id="@+id/action_nav_home_to_nav_usb"
            app:destination="@id/nav_usb_device" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_search_ports"
            app:destination="@id/nav_search_ports" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings2"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_blueToothFragment"
            app:destination="@id/nav_bluetooth" />
    </fragment>

    <fragment
        android:id="@+id/nav_title"
        android:name="com.example.tcp_ip_client_2.ui.tcpip.TitleFragment"
        android:label="TCP IP Client"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_nav_title_to_nav_tcp_ip"
            app:destination="@id/nav_tcp_ip" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tcp_ip_client_2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_usb"
        android:name="com.example.tcp_ip_client_2.ui.usb.UsbFragment"
        android:label="@string/menu_usb"
        tools:layout="@layout/fragment_usb" />

    <fragment
        android:id="@+id/nav_usb_device"
        android:name="com.example.tcp_ip_client_2.ui.usb.DevicesFragment"
        android:label="device"
        tools:layout="@layout/device_list_header" >
        <action
            android:id="@+id/action_nav_usb_device_to_nav_usb"
            app:destination="@id/nav_usb" />
    </fragment>

    <fragment
        android:id="@+id/nav_tcp_ip"
        android:name="com.example.tcp_ip_client_2.ui.tcpip.tcp_ip.TCP_IP_Fragment"
        android:label="TCP_IP"
        tools:layout="@layout/fragment_tcp_ip" />

    <!--<fragment
        android:id="@+id/nav_preference"
        android:name="com.example.tcp_ip_client_2.ui.preferences.SharedPreferenceFragment"
        android:label="Настройки"
        tools:layout="@xml/root_preferences"
        />-->

    <fragment
        android:id="@+id/nav_search_ports"
        android:name="com.example.tcp_ip_client_2.ui.search_ports.SearchPortsFragment"
        android:label="@string/searchPorts"
        tools:layout="@layout/fragment_search_port"
        />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.tcp_ip_client_2.ui.preferences.SettingsFragment"
        android:label="@string/obshie_nastroiyki"
        tools:layout="@layout/fragment_settings"
        >
        <action
            android:id="@+id/action_nav_settings_to_preference_Page_Fragment"
            app:destination="@id/preference_Page_Fragment" />
    </fragment>
    <fragment
        android:id="@+id/preference_Page_Fragment"
        android:name="com.example.tcp_ip_client_2.ui.preferences.Preference_Page_Fragment"
        android:label="fragment_preference_page"
        tools:layout="@layout/fragment_preference_page" />
    <fragment
        android:id="@+id/nav_bluetooth"
        android:name="com.example.tcp_ip_client_2.DiviceFragment"
        android:label="@string/bluetooth"
        tools:layout="@layout/fragment_bluetooth" >
        <action
            android:id="@+id/action_nav_bluetooth_to_keyboardFragment"
            app:destination="@id/nav_keyboard" />
    </fragment>
    <fragment
        android:id="@+id/nav_keyboard"
        android:name="com.example.tcp_ip_client_2.ui.bluetooth.KeyboardFragment"
        android:label="@string/keyboard"
        tools:layout="@layout/fragment_keyboard" />
    <fragment
        android:id="@+id/nav_tcpIpFragment"
        android:name="com.example.tcp_ip_client_2.ui.tcpip.tcp_ip.TCP_IP_Fragment"
        android:label="terminal"
        tools:layout="@layout/fragment_tcp_ip" >
        <action
            android:id="@+id/action_nav_tcpIpFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_mipIFragment"
        android:name="com.example.tcp_ip_client_2.ui.mip.MipIFragment"
        android:label="МИП-И конфигуратор"
        tools:layout="@layout/fragment_mip_i" >
        <action
            android:id="@+id/action_mipIFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>


</navigation>